packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/broken_link_parent.syx
<?xml version='1.0' encoding='ASCII'?>
<flow xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" cls="Flow" height="50.0" id="" is_locked="False" uuid="{7a4b7ca5-7571-40a2-83c0-f4b1754a437f}" width="50.0" x="0.0" y="0.0">
  <label></label>
  <description></description>
  <author></author>
  <copyright></copyright>
  <version></version>
  <min_version></min_version>
  <aggregation type="json">null</aggregation>
  <libraries type="json">[]</libraries>
  <pythonpaths type="json">[]</pythonpaths>
  <overrides type="json">{}</overrides>
  <parameters type="json">{}</parameters>
  <ports/>
  <flow cls="Flow" height="50.0" id="" is_locked="False" source_uuid="{41e42bef-3983-49ec-b202-a504209ab9b1}" uuid="{b512cffd-9459-4773-a606-e002a55bf3a2}" width="50.0" x="1650.0" y="1825.0" href="broken_link_child.syx">
    <label>New Subflow 0</label>
    <overrides type="json">{}</overrides>
    <ports/>
  </flow>
  <node id="org.sysess.sympathy.random.randomtable" uuid="{591ef31f-7745-455c-9b6a-02db6fc022c5}" x="1525.0" y="1825.0">
    <label>Random Table</label>
    <description>Random Table generator.</description>
    <author>Erik der Hagopian &lt;erik.hagopian@combine.se&gt;</author>
    <copyright>(C) 2013 Combine Control Systems AB</copyright>
    <version>0.1</version>
    <parameters type="json">{"type": "group", "column_entries": {"description": "The number of columns in the generated table.", "label": "Columns:", "order": 0, "type": "integer", "value": 5, "editor": {"max": 1000000, "min": 0, "step": 1, "type": "spinbox"}}, "column_length": {"description": "The number of rows in the generated table.", "label": "Rows:", "order": 1, "type": "integer", "value": 5, "editor": {"max": 100000000, "min": 0, "step": 1, "type": "spinbox"}}, "mask_values": {"description": "If checked each value has a 50% chance to be masked.", "editor": null, "label": "Randomly mask values", "order": 2, "type": "boolean", "value": false}}</parameters>
    <ports>
      <output key="port0" scheme="hdf5" type="table" type_base="table" uuid="{b17e2d5a-abda-47c6-b37a-c84351bbe1e9}">
        <label>Table with random numbers. The specifications of the Table are declared in the configuration.</label>
        <description>Table with random numbers. The specifications of the Table are declared in the configuration.</description>
      </output>
    </ports>
  </node>
</flow>
